<resources>
    <string name="app_name">ToanTHPTQG</string>
    <string name="text_login_google">Sign in with Google</string>
    <string name="text_login_facebook">Sign in with Facebook</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_test_day">Ngày thi</string>
    <string name="title_do_exam">Luyện thi</string>
    <string name="title_school">Trường học</string>
    <string name="title_news">Tin tức</string>
    <string name="title_account">Tài khoản</string>
    <string name="list_exam">Danh sách đề thi</string>
    <string name="list_school">Danh sách trường học</string>
    <string name="share">Chia sẻ</string>
    <string name="search">Tìm kiếm</string>
    <string name="logout">Đăng xuất</string>
    <string name="exit">Thoát</string>
    <string name="top_text_test_day">Kì thi THPT Quốc Gia </string>
    <string name="day_left">Ngày nữa</string>
    <string name="test_date">Ngày thi:</string>
    <string name="year">Năm</string>
    <string name="updating">Đang cập nhật</string>
    <string name="today">Hôm nay</string>
    <string name="greeting_sentence">Các bạn nên nhớ, hãy tự tin và bình tĩnh để có thể làm bài thành công nhé. Tất cả mọi người đều tin ở bạn. Cố lên bạn hiền.</string>
    <string name="sentence1">Học... học để là chính mình, và học để từ bỏ với vẻ thanh cao những gì không phải là mình.</string>
    <string name="author1">Henri Frederic Amiel</string>
    <string name="sentence2">Kinh nghiệm chỉ dạy cho những ai có thể dạy dỗ.</string>
    <string name="author2">Aldous Huxley</string>
    <string name="sentence3">Thà học muộn còn hơn không bao giờ học.</string>
    <string name="author3">Publilius Syrus</string>
    <string name="sentence4">Người mà không học khác gì mò mẫm trong đêm.</string>
    <string name="author4">Tục ngữ Việt Nam</string>
    <string name="sentence5">Học thầy không tầy học bạn.</string>
    <string name="author5">Tục ngữ Việt Nam</string>
    <string name="sentence6">Hãy học những điều tốt - điều xấu sẽ tự dạy bạn biết đến nó.</string>
    <string name="author6">Ngạn ngữ Nga</string>
    <string name="sentence7">Ngủ dậy muộn thì phí mất cả ngày, ở tuổi thanh niên mà không học tập thì phí mất cả cuộc đời.</string>
    <string name="author7">Ngạn ngữ Trung Quốc</string>
    <string name="sentence8">Bạn có thể học được từ thầy giáo, nhưng bạn sẽ phải tự học rất nhiều với bản thân, ngồi đơn độc trong một căn phòng.</string>
    <string name="author8">Dr Seuss</string>
    <string name="sentence9">Người sáng suốt không cần lời khuyên. Kẻ ngu ngốc không chịu nhận lời khuyên.</string>
    <string name="author9">Benjamin Franklin</string>
    <string name="sentence10">Thiên tài không có học hành giống như bạc trong mỏ.</string>
    <string name="author10">Benjamin Franklin</string>
    <string name="sentence11">Ngu dốt không đáng xấu hổ như không chịu học hỏi.</string>
    <string name="author11">Benjamin Franklin</string>
    <string name="sentence12">Bạn càng đọc nhiều, bạn càng biết nhiều. Bạn càng học nhiều, bạn càng đi nhiều.</string>
    <string name="author12">Dr Seuss</string>
    <string name="sentence13">Bé chẳng học, lớn làm gì?</string>
    <string name="author13">Ngạn ngữ Trung Quốc</string>
    <string name="sentence14">Cơm cha áo mẹ chữ thầy. Gắng công mà học có ngày thành danh.</string>
    <string name="author14">Tục ngữ Việt Nam</string>
    <string name="title_school_fragment">Danh sách các trường</string>
</resources>
