<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_test_day"
        android:icon="@drawable/ic_test_day"
        android:title="@string/title_test_day" />

    <item
        android:id="@+id/navigation_do_exam"
        android:icon="@drawable/ic_do_exam"
        android:title="@string/title_do_exam" />

    <item
        android:id="@+id/navigation_school"
        android:icon="@drawable/ic_school_nav"
        android:title="@string/title_school" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>
