<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_test_day">

    <fragment
        android:id="@+id/navigation_test_day"
        android:name="vn.poly.toanthptqg.fragment.ui.testday.TestDayFragment"
        android:label="@string/title_test_day"
        tools:layout="@layout/fragment_test_day" />

    <fragment
        android:id="@+id/navigation_do_exam"
        android:name="vn.poly.toanthptqg.fragment.ui.doexam.DoExamFragment"
        android:label="@string/list_exam"
        tools:layout="@layout/fragment_do_exam" />

    <fragment
        android:id="@+id/navigation_school"
        android:name="vn.poly.toanthptqg.fragment.ui.school.SchoolFragment"
        android:label="@string/list_school"
        tools:layout="@layout/fragment_school" />
    <fragment
        android:id="@+id/navigation_news"
        android:name="vn.poly.toanthptqg.fragment.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="vn.poly.toanthptqg.fragment.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>