<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="Search"

        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/share"

        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="collapseActionView"
        />
</menu>