<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvTopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_text_test_day"
            android:textSize="32sp"
            android:textStyle="" />
       <LinearLayout
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:textSize="32sp"
               android:layout_marginRight="8dp"
               android:text="@string/year"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:textSize="32sp"
               android:id="@+id/tvYearDateTest"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fram_countdown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCountDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="80sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_left"
                    android:textColor="@color/colorWhite"
                    android:textSize="32dp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/test_date"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvDateTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Học... học để là chính mình, và học để từ bỏ với vẻ thanh cao những gì không phải là mình."
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvAuthor"
                android:textStyle="italic"
                android:layout_gravity="right"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:text="(Henri Frederic Amiel)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>